// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom notifications 1`] = `
.c3 {
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.c7 {
  font-weight: 500;
  margin-right: 8px;
  white-space: nowrap;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: inherit;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #19B28D;
  color: #FFFFFF;
  margin-bottom: 8px;
  padding-right: 46px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #EE505A;
  color: #FFFFFF;
  margin-bottom: 8px;
  padding-right: 46px;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  outline: 0;
  position: relative;
  border-radius: 8px;
  border-color: transparent;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.3s ease,color 0.3s ease,border-color 0.3s ease;
  transition: background-color 0.3s ease,color 0.3s ease,border-color 0.3s ease;
  font-size: 14px;
  line-height: 22px;
  padding: 0 20px;
  height: 36px;
  min-width: 36px;
  color: #FFFFFF;
  background-color: #2B2D33;
}

.c8:active {
  top: 1px;
}

.c8:hover {
  background-color: #000000;
  color: #FFFFFF;
}

.c9 {
  display: inline-block;
  vertical-align: top;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c9:not(:last-of-type) {
  margin-right: 8px;
}

.c9 > svg {
  display: block;
}

.c10 {
  position: absolute;
  top: 16px;
  right: 16px;
  cursor: pointer;
  color: #BFE9DF;
}

.c10:hover {
  color: #FFFFFF;
}

.c12 {
  position: absolute;
  top: 16px;
  right: 16px;
  cursor: pointer;
  color: #FACED1;
}

.c12:hover {
  color: #FFFFFF;
}

.c1 {
  -webkit-transition: height 0.5s ease;
  transition: height 0.5s ease;
  width: 500px;
  -webkit-animation: gYAHGK 0.5s ease forwards;
  animation: gYAHGK 0.5s ease forwards;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: fixed;
  z-index: 99999999;
  margin: 12px 0;
  -webkit-transition: height 0.5s ease;
  transition: height 0.5s ease;
  right: 20px;
  bottom: 0;
}

@media (max-width:10000px) {
  .c2 .c4 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .c2 .c4 .c6 {
    margin-bottom: 8px;
  }
}

@media (max-width:10000px) {
  .c11 .c4 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .c11 .c4 .c6 {
    margin-bottom: 8px;
  }
}

@media (max-width:10000px) {
  .c1 {
    width: 350px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    open=""
  >
    <div
      class="c2"
      id="notification_0"
    >
      <div
        class="c3"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M11.707 15.207l5-5-1.414-1.414L11 13.086l-2.793-2.793-1.414 1.414 3.5 3.5a1 1 0 001.414 0z"
          />
          <path
            clip-rule="evenodd"
            d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zM4 12a8 8 0 1116 0 8 8 0 01-16 0z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7"
        >
          Custom notification
        </div>
        <div>
          <b
            style="text-transform:uppercase"
          >
            [ok]: 
          </b>
          This is a custom notification
          <div
            style="margin-top:10px"
          >
            <button
              class="c8"
              type="button"
            >
              <span
                class="c9"
              >
                OK
              </span>
            </button>
          </div>
          <span
            class="c10"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c1"
    open=""
  >
    <div
      class="c11"
      id="notification_1"
    >
      <div
        class="c3"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            clip-rule="evenodd"
            d="M12.874 2.514a1 1 0 00-1.748 0l-10 18A1 1 0 002 22h20a1 1 0 00.874-1.486l-10-18zM12 5.06L20.3 20H3.7L12 5.06zM11 10v5h2v-5h-2zm1 8.75a1.25 1.25 0 110-2.5 1.25 1.25 0 010 2.5z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7"
        >
          Custom notification
        </div>
        <div>
          <b
            style="text-transform:uppercase"
          >
            [error]: 
          </b>
          This is a custom error notification
          <span
            class="c12"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications 1`] = `
.c3 {
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.c5 {
  font-weight: 500;
  margin-right: 8px;
  white-space: nowrap;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: inherit;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #2B2D33;
  color: #FFFFFF;
  margin-bottom: 8px;
  padding-right: 46px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #19B28D;
  color: #FFFFFF;
  margin-bottom: 8px;
  padding-right: 46px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #F88545;
  color: #FFFFFF;
  margin-bottom: 8px;
  padding-right: 46px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #EE505A;
  color: #FFFFFF;
  margin-bottom: 8px;
  padding-right: 46px;
}

.c6 {
  position: absolute;
  top: 16px;
  right: 16px;
  cursor: pointer;
  color: #AAABAD;
}

.c6:hover {
  color: #FFFFFF;
}

.c8 {
  position: absolute;
  top: 16px;
  right: 16px;
  cursor: pointer;
  color: #BFE9DF;
}

.c8:hover {
  color: #FFFFFF;
}

.c10 {
  position: absolute;
  top: 16px;
  right: 16px;
  cursor: pointer;
  color: #FDDAC7;
}

.c10:hover {
  color: #FFFFFF;
}

.c12 {
  position: absolute;
  top: 16px;
  right: 16px;
  cursor: pointer;
  color: #FACED1;
}

.c12:hover {
  color: #FFFFFF;
}

.c1 {
  -webkit-transition: height 0.5s ease;
  transition: height 0.5s ease;
  width: 500px;
  -webkit-animation: gYAHGK 0.5s ease forwards;
  animation: gYAHGK 0.5s ease forwards;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: fixed;
  z-index: 99999999;
  margin: 12px 0;
  -webkit-transition: height 0.5s ease;
  transition: height 0.5s ease;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  width: 1px;
  left: 50%;
  top: 0;
}

<div
  class="c0"
>
  <div
    class="c1"
    open=""
  >
    <div
      class="c2"
      id="notification_0"
    >
      <div
        class="c3"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
          />
          <path
            clip-rule="evenodd"
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          Plain notification.
        </div>
        <div>
          Для нейтральных уведомлений
          <span
            class="c6"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c1"
    open=""
  >
    <div
      class="c7"
      id="notification_1"
    >
      <div
        class="c3"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M11.707 15.207l5-5-1.414-1.414L11 13.086l-2.793-2.793-1.414 1.414 3.5 3.5a1 1 0 001.414 0z"
          />
          <path
            clip-rule="evenodd"
            d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zM4 12a8 8 0 1116 0 8 8 0 01-16 0z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          Success notification.
        </div>
        <div>
          Для успешных уведомлений.
          <span
            class="c8"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c1"
    open=""
  >
    <div
      class="c9"
      id="notification_2"
    >
      <div
        class="c3"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M11 13V7h2v6h-2zm1 4a1.25 1.25 0 110-2.5 1.25 1.25 0 010 2.5z"
          />
          <path
            clip-rule="evenodd"
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          Warning notification.
        </div>
        <div>
          Для предупреждений.
          <span
            class="c10"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c1"
    open=""
  >
    <div
      class="c11"
      id="notification_3"
    >
      <div
        class="c3"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            clip-rule="evenodd"
            d="M12.874 2.514a1 1 0 00-1.748 0l-10 18A1 1 0 002 22h20a1 1 0 00.874-1.486l-10-18zM12 5.06L20.3 20H3.7L12 5.06zM11 10v5h2v-5h-2zm1 8.75a1.25 1.25 0 110-2.5 1.25 1.25 0 010 2.5z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          Error notification.
        </div>
        <div>
          Для ошибок.
          <span
            class="c12"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications w/ buttons 1`] = `
.c3 {
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.c7 {
  font-weight: 500;
  margin-right: 8px;
  white-space: nowrap;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: inherit;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #2B2D33;
  color: #FFFFFF;
  margin-bottom: 8px;
  padding-right: 46px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #19B28D;
  color: #FFFFFF;
  margin-bottom: 8px;
  padding-right: 46px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #F88545;
  color: #FFFFFF;
  margin-bottom: 8px;
  padding-right: 46px;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #EE505A;
  color: #FFFFFF;
  margin-bottom: 8px;
  padding-right: 46px;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #2B2D33;
  color: #FFFFFF;
  margin-bottom: 8px;
  padding-right: 46px;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #2B2D33;
  color: #FFFFFF;
  margin-bottom: 8px;
  padding-right: 46px;
}

.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #19B28D;
  color: #FFFFFF;
  margin-bottom: 8px;
  padding-right: 46px;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #F88545;
  color: #FFFFFF;
  margin-bottom: 8px;
  padding-right: 46px;
}

.c26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #EE505A;
  color: #FFFFFF;
  margin-bottom: 8px;
  padding-right: 46px;
}

.c18 {
  margin-top: 16px;
}

.c21 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  outline: 0;
  position: relative;
  border-radius: 8px;
  border-color: transparent;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.3s ease,color 0.3s ease,border-color 0.3s ease;
  transition: background-color 0.3s ease,color 0.3s ease,border-color 0.3s ease;
  font-size: 14px;
  line-height: 22px;
  padding: 0 20px;
  height: 36px;
  min-width: 36px;
  color: #FFFFFF;
  border: solid 2px rgba(255,255,255,0.64);
  height: 32px;
  border-radius: 4px;
  background: transparent;
}

.c21:active {
  top: 1px;
}

.c21:hover {
  border: solid 2px #FFFFFF;
}

.c23 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  outline: 0;
  position: relative;
  border-radius: 8px;
  border-color: transparent;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.3s ease,color 0.3s ease,border-color 0.3s ease;
  transition: background-color 0.3s ease,color 0.3s ease,border-color 0.3s ease;
  font-size: 14px;
  line-height: 22px;
  padding: 0 20px;
  height: 36px;
  min-width: 36px;
  color: #FFFFFF;
  padding: 0;
  height: 32px;
  border-radius: 4px;
  background: transparent;
}

.c23:active {
  top: 1px;
}

.c23:hover {
  color: #FFFFFF;
}

.c22 {
  display: inline-block;
  vertical-align: top;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c22:not(:last-of-type) {
  margin-right: 8px;
}

.c22 > svg {
  display: block;
}

.c19 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: -16px;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  vertical-align: middle;
  width: 100%;
}

.c20 {
  position: relative;
  margin-bottom: 16px;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 16px;
  width: auto;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c20:last-child {
  margin-right: 0;
}

.c8 {
  position: absolute;
  top: 16px;
  right: 16px;
  cursor: pointer;
  color: #AAABAD;
}

.c8:hover {
  color: #FFFFFF;
}

.c10 {
  position: absolute;
  top: 16px;
  right: 16px;
  cursor: pointer;
  color: #BFE9DF;
}

.c10:hover {
  color: #FFFFFF;
}

.c12 {
  position: absolute;
  top: 16px;
  right: 16px;
  cursor: pointer;
  color: #FDDAC7;
}

.c12:hover {
  color: #FFFFFF;
}

.c14 {
  position: absolute;
  top: 16px;
  right: 16px;
  cursor: pointer;
  color: #FACED1;
}

.c14:hover {
  color: #FFFFFF;
}

.c1 {
  -webkit-transition: height 0.5s ease;
  transition: height 0.5s ease;
  width: 500px;
  -webkit-animation: gYAHGK 0.5s ease forwards;
  animation: gYAHGK 0.5s ease forwards;
}

.c15 {
  -webkit-transition: height 0.5s ease;
  transition: height 0.5s ease;
  width: 500px;
  -webkit-animation: gYAHGK 0.5s ease forwards;
  animation: gYAHGK 0.5s ease forwards;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: fixed;
  z-index: 99999999;
  margin: 12px 0;
  -webkit-transition: height 0.5s ease;
  transition: height 0.5s ease;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  width: 1px;
  left: 50%;
  top: 0;
}

@media (max-width:1024px) {
  .c16 .c4 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .c16 .c4 .c6 {
    margin-bottom: 8px;
  }
}

@media (max-width:100000px) {
  .c17 .c4 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .c17 .c4 .c6 {
    margin-bottom: 8px;
  }
}

@media (max-width:100000px) {
  .c24 .c4 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .c24 .c4 .c6 {
    margin-bottom: 8px;
  }
}

@media (max-width:100000px) {
  .c25 .c4 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .c25 .c4 .c6 {
    margin-bottom: 8px;
  }
}

@media (max-width:100000px) {
  .c26 .c4 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .c26 .c4 .c6 {
    margin-bottom: 8px;
  }
}

@media (max-width:1024px) {
  .c15 {
    width: 350px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    open=""
  >
    <div
      class="c2"
      id="notification_0"
    >
      <div
        class="c3"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
          />
          <path
            clip-rule="evenodd"
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7"
        >
          Plain notification.
        </div>
        <div>
          Для нейтральных уведомлений
          <span
            class="c8"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c1"
    open=""
  >
    <div
      class="c9"
      id="notification_1"
    >
      <div
        class="c3"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M11.707 15.207l5-5-1.414-1.414L11 13.086l-2.793-2.793-1.414 1.414 3.5 3.5a1 1 0 001.414 0z"
          />
          <path
            clip-rule="evenodd"
            d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zM4 12a8 8 0 1116 0 8 8 0 01-16 0z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7"
        >
          Success notification.
        </div>
        <div>
          Для успешных уведомлений.
          <span
            class="c10"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c1"
    open=""
  >
    <div
      class="c11"
      id="notification_2"
    >
      <div
        class="c3"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M11 13V7h2v6h-2zm1 4a1.25 1.25 0 110-2.5 1.25 1.25 0 010 2.5z"
          />
          <path
            clip-rule="evenodd"
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7"
        >
          Warning notification.
        </div>
        <div>
          Для предупреждений.
          <span
            class="c12"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c1"
    open=""
  >
    <div
      class="c13"
      id="notification_3"
    >
      <div
        class="c3"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            clip-rule="evenodd"
            d="M12.874 2.514a1 1 0 00-1.748 0l-10 18A1 1 0 002 22h20a1 1 0 00.874-1.486l-10-18zM12 5.06L20.3 20H3.7L12 5.06zM11 10v5h2v-5h-2zm1 8.75a1.25 1.25 0 110-2.5 1.25 1.25 0 010 2.5z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7"
        >
          Error notification.
        </div>
        <div>
          Для ошибок.
          <span
            class="c14"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c15"
    open=""
  >
    <div
      class="c16"
      id="notification_4"
    >
      <div
        class="c3"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
          />
          <path
            clip-rule="evenodd"
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7"
        >
          Plain notification.
        </div>
        <div>
          Для нейтральных уведомлений
          <span
            class="c8"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c1"
    open=""
  >
    <div
      class="c17"
      id="notification_5"
    >
      <div
        class="c3"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
          />
          <path
            clip-rule="evenodd"
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7"
        >
          Notification with actions
        </div>
        <div>
          Some text goes here.
          <span
            class="c8"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
        <div
          class="c18"
        >
          <div
            class="c19"
          >
            <div
              class="c20"
            >
              <button
                class="c21"
                type="button"
              >
                <span
                  class="c22"
                >
                  OK
                </span>
              </button>
            </div>
            <div
              class="c20"
            >
              <button
                class="c23"
                type="button"
              >
                <span
                  class="c22"
                >
                  Cancel
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c1"
    open=""
  >
    <div
      class="c24"
      id="notification_6"
    >
      <div
        class="c3"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M11.707 15.207l5-5-1.414-1.414L11 13.086l-2.793-2.793-1.414 1.414 3.5 3.5a1 1 0 001.414 0z"
          />
          <path
            clip-rule="evenodd"
            d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zM4 12a8 8 0 1116 0 8 8 0 01-16 0z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7"
        >
          Notification with actions
        </div>
        <div>
          Some text goes here.
          <span
            class="c10"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
        <div
          class="c18"
        >
          <div
            class="c19"
          >
            <div
              class="c20"
            >
              <button
                class="c21"
                type="button"
              >
                <span
                  class="c22"
                >
                  OK
                </span>
              </button>
            </div>
            <div
              class="c20"
            >
              <button
                class="c23"
                type="button"
              >
                <span
                  class="c22"
                >
                  Cancel
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c1"
    open=""
  >
    <div
      class="c25"
      id="notification_7"
    >
      <div
        class="c3"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M11 13V7h2v6h-2zm1 4a1.25 1.25 0 110-2.5 1.25 1.25 0 010 2.5z"
          />
          <path
            clip-rule="evenodd"
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7"
        >
          Notification with actions
        </div>
        <div>
          Some text goes here.
          <span
            class="c12"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
        <div
          class="c18"
        >
          <div
            class="c19"
          >
            <div
              class="c20"
            >
              <button
                class="c21"
                type="button"
              >
                <span
                  class="c22"
                >
                  OK
                </span>
              </button>
            </div>
            <div
              class="c20"
            >
              <button
                class="c23"
                type="button"
              >
                <span
                  class="c22"
                >
                  Cancel
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c1"
    open=""
  >
    <div
      class="c26"
      id="notification_8"
    >
      <div
        class="c3"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            clip-rule="evenodd"
            d="M12.874 2.514a1 1 0 00-1.748 0l-10 18A1 1 0 002 22h20a1 1 0 00.874-1.486l-10-18zM12 5.06L20.3 20H3.7L12 5.06zM11 10v5h2v-5h-2zm1 8.75a1.25 1.25 0 110-2.5 1.25 1.25 0 010 2.5z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7"
        >
          Notification with actions
        </div>
        <div>
          Some text goes here.
          <span
            class="c14"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
        <div
          class="c18"
        >
          <div
            class="c19"
          >
            <div
              class="c20"
            >
              <button
                class="c21"
                type="button"
              >
                <span
                  class="c22"
                >
                  OK
                </span>
              </button>
            </div>
            <div
              class="c20"
            >
              <button
                class="c23"
                type="button"
              >
                <span
                  class="c22"
                >
                  Cancel
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications w/ compact 1`] = `
.c3 {
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.c7 {
  font-weight: 500;
  margin-right: 8px;
  white-space: nowrap;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: inherit;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #2B2D33;
  color: #FFFFFF;
  margin-bottom: 8px;
  padding-right: 46px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #19B28D;
  color: #FFFFFF;
  margin-bottom: 8px;
  padding-right: 46px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #F88545;
  color: #FFFFFF;
  margin-bottom: 8px;
  padding-right: 46px;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #EE505A;
  color: #FFFFFF;
  margin-bottom: 8px;
  padding-right: 46px;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #2B2D33;
  color: #FFFFFF;
  margin-bottom: 8px;
  padding-right: 46px;
}

.c8 {
  position: absolute;
  top: 16px;
  right: 16px;
  cursor: pointer;
  color: #AAABAD;
}

.c8:hover {
  color: #FFFFFF;
}

.c10 {
  position: absolute;
  top: 16px;
  right: 16px;
  cursor: pointer;
  color: #BFE9DF;
}

.c10:hover {
  color: #FFFFFF;
}

.c12 {
  position: absolute;
  top: 16px;
  right: 16px;
  cursor: pointer;
  color: #FDDAC7;
}

.c12:hover {
  color: #FFFFFF;
}

.c14 {
  position: absolute;
  top: 16px;
  right: 16px;
  cursor: pointer;
  color: #FACED1;
}

.c14:hover {
  color: #FFFFFF;
}

.c1 {
  -webkit-transition: height 0.5s ease;
  transition: height 0.5s ease;
  width: 500px;
  -webkit-animation: gYAHGK 0.5s ease forwards;
  animation: gYAHGK 0.5s ease forwards;
}

.c15 {
  -webkit-transition: height 0.5s ease;
  transition: height 0.5s ease;
  width: 500px;
  -webkit-animation: gYAHGK 0.5s ease forwards;
  animation: gYAHGK 0.5s ease forwards;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: fixed;
  z-index: 99999999;
  margin: 12px 0;
  -webkit-transition: height 0.5s ease;
  transition: height 0.5s ease;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  width: 1px;
  left: 50%;
  top: 0;
}

@media (max-width:1024px) {
  .c16 .c4 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .c16 .c4 .c6 {
    margin-bottom: 8px;
  }
}

@media (max-width:1024px) {
  .c15 {
    width: 350px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    open=""
  >
    <div
      class="c2"
      id="notification_0"
    >
      <div
        class="c3"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
          />
          <path
            clip-rule="evenodd"
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7"
        >
          Plain notification.
        </div>
        <div>
          Для нейтральных уведомлений
          <span
            class="c8"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c1"
    open=""
  >
    <div
      class="c9"
      id="notification_1"
    >
      <div
        class="c3"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M11.707 15.207l5-5-1.414-1.414L11 13.086l-2.793-2.793-1.414 1.414 3.5 3.5a1 1 0 001.414 0z"
          />
          <path
            clip-rule="evenodd"
            d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zM4 12a8 8 0 1116 0 8 8 0 01-16 0z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7"
        >
          Success notification.
        </div>
        <div>
          Для успешных уведомлений.
          <span
            class="c10"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c1"
    open=""
  >
    <div
      class="c11"
      id="notification_2"
    >
      <div
        class="c3"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M11 13V7h2v6h-2zm1 4a1.25 1.25 0 110-2.5 1.25 1.25 0 010 2.5z"
          />
          <path
            clip-rule="evenodd"
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7"
        >
          Warning notification.
        </div>
        <div>
          Для предупреждений.
          <span
            class="c12"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c1"
    open=""
  >
    <div
      class="c13"
      id="notification_3"
    >
      <div
        class="c3"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            clip-rule="evenodd"
            d="M12.874 2.514a1 1 0 00-1.748 0l-10 18A1 1 0 002 22h20a1 1 0 00.874-1.486l-10-18zM12 5.06L20.3 20H3.7L12 5.06zM11 10v5h2v-5h-2zm1 8.75a1.25 1.25 0 110-2.5 1.25 1.25 0 010 2.5z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7"
        >
          Error notification.
        </div>
        <div>
          Для ошибок.
          <span
            class="c14"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c15"
    open=""
  >
    <div
      class="c16"
      id="notification_4"
    >
      <div
        class="c3"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
          />
          <path
            clip-rule="evenodd"
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7"
        >
          Plain notification.
        </div>
        <div>
          Для нейтральных уведомлений
          <span
            class="c8"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications w/ limit 1`] = `
.c3 {
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.c5 {
  font-weight: 500;
  margin-right: 8px;
  white-space: nowrap;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: inherit;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #2B2D33;
  color: #FFFFFF;
  margin-bottom: 8px;
  padding-right: 46px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #19B28D;
  color: #FFFFFF;
  margin-bottom: 8px;
  padding-right: 46px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #F88545;
  color: #FFFFFF;
  margin-bottom: 8px;
  padding-right: 46px;
}

.c6 {
  position: absolute;
  top: 16px;
  right: 16px;
  cursor: pointer;
  color: #AAABAD;
}

.c6:hover {
  color: #FFFFFF;
}

.c8 {
  position: absolute;
  top: 16px;
  right: 16px;
  cursor: pointer;
  color: #BFE9DF;
}

.c8:hover {
  color: #FFFFFF;
}

.c10 {
  position: absolute;
  top: 16px;
  right: 16px;
  cursor: pointer;
  color: #FDDAC7;
}

.c10:hover {
  color: #FFFFFF;
}

.c1 {
  -webkit-transition: height 0.5s ease;
  transition: height 0.5s ease;
  width: 500px;
  -webkit-animation: gYAHGK 0.5s ease forwards;
  animation: gYAHGK 0.5s ease forwards;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: fixed;
  z-index: 99999999;
  margin: 12px 0;
  -webkit-transition: height 0.5s ease;
  transition: height 0.5s ease;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  width: 1px;
  left: 50%;
  top: 0;
}

<div
  class="c0"
>
  <div
    class="c1"
    open=""
  >
    <div
      class="c2"
      id="notification_0"
    >
      <div
        class="c3"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
          />
          <path
            clip-rule="evenodd"
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          Plain notification.
        </div>
        <div>
          Для нейтральных уведомлений
          <span
            class="c6"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c1"
    open=""
  >
    <div
      class="c7"
      id="notification_1"
    >
      <div
        class="c3"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M11.707 15.207l5-5-1.414-1.414L11 13.086l-2.793-2.793-1.414 1.414 3.5 3.5a1 1 0 001.414 0z"
          />
          <path
            clip-rule="evenodd"
            d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zM4 12a8 8 0 1116 0 8 8 0 01-16 0z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          Success notification.
        </div>
        <div>
          Для успешных уведомлений.
          <span
            class="c8"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c1"
    open=""
  >
    <div
      class="c9"
      id="notification_2"
    >
      <div
        class="c3"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M11 13V7h2v6h-2zm1 4a1.25 1.25 0 110-2.5 1.25 1.25 0 010 2.5z"
          />
          <path
            clip-rule="evenodd"
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          Warning notification.
        </div>
        <div>
          Для предупреждений.
          <span
            class="c10"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications w/ position 1`] = `
Array [
  .c3 {
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.c5 {
  font-weight: 500;
  margin-right: 8px;
  white-space: nowrap;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: inherit;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #2B2D33;
  color: #FFFFFF;
  margin-bottom: 8px;
  padding-right: 46px;
}

.c6 {
  position: absolute;
  top: 16px;
  right: 16px;
  cursor: pointer;
  color: #AAABAD;
}

.c6:hover {
  color: #FFFFFF;
}

.c1 {
  -webkit-transition: height 0.5s ease;
  transition: height 0.5s ease;
  width: 500px;
  -webkit-animation: gYAHGK 0.5s ease forwards;
  animation: gYAHGK 0.5s ease forwards;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: fixed;
  z-index: 99999999;
  margin: 12px 0;
  -webkit-transition: height 0.5s ease;
  transition: height 0.5s ease;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  left: 20px;
  top: 0;
}

<div
    class="c0"
  >
    <div
      class="c1"
      open=""
    >
      <div
        class="c2"
        id="notification_0"
      >
        <div
          class="c3"
        >
          <svg
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <path
              d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
            />
            <path
              clip-rule="evenodd"
              d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            Plain notification.
          </div>
          <div>
            Для нейтральных уведомлений
            <span
              class="c6"
            >
              <svg
                fill="currentColor"
                height="20"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <defs />
                <path
                  d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  .c3 {
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.c5 {
  font-weight: 500;
  margin-right: 8px;
  white-space: nowrap;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: inherit;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #2B2D33;
  color: #FFFFFF;
  margin-bottom: 8px;
  padding-right: 46px;
}

.c6 {
  position: absolute;
  top: 16px;
  right: 16px;
  cursor: pointer;
  color: #AAABAD;
}

.c6:hover {
  color: #FFFFFF;
}

.c1 {
  -webkit-transition: height 0.5s ease;
  transition: height 0.5s ease;
  width: 500px;
  -webkit-animation: gYAHGK 0.5s ease forwards;
  animation: gYAHGK 0.5s ease forwards;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: fixed;
  z-index: 99999999;
  margin: 12px 0;
  -webkit-transition: height 0.5s ease;
  transition: height 0.5s ease;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  width: 1px;
  left: 50%;
  top: 0;
}

<div
    class="c0"
  >
    <div
      class="c1"
      open=""
    >
      <div
        class="c2"
        id="notification_0"
      >
        <div
          class="c3"
        >
          <svg
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <path
              d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
            />
            <path
              clip-rule="evenodd"
              d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            Plain notification.
          </div>
          <div>
            Для нейтральных уведомлений
            <span
              class="c6"
            >
              <svg
                fill="currentColor"
                height="20"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <defs />
                <path
                  d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  .c3 {
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.c5 {
  font-weight: 500;
  margin-right: 8px;
  white-space: nowrap;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: inherit;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #2B2D33;
  color: #FFFFFF;
  margin-bottom: 8px;
  padding-right: 46px;
}

.c6 {
  position: absolute;
  top: 16px;
  right: 16px;
  cursor: pointer;
  color: #AAABAD;
}

.c6:hover {
  color: #FFFFFF;
}

.c1 {
  -webkit-transition: height 0.5s ease;
  transition: height 0.5s ease;
  width: 500px;
  -webkit-animation: gYAHGK 0.5s ease forwards;
  animation: gYAHGK 0.5s ease forwards;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: fixed;
  z-index: 99999999;
  margin: 12px 0;
  -webkit-transition: height 0.5s ease;
  transition: height 0.5s ease;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  right: 20px;
  top: 0;
}

<div
    class="c0"
  >
    <div
      class="c1"
      open=""
    >
      <div
        class="c2"
        id="notification_0"
      >
        <div
          class="c3"
        >
          <svg
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <path
              d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
            />
            <path
              clip-rule="evenodd"
              d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            Plain notification.
          </div>
          <div>
            Для нейтральных уведомлений
            <span
              class="c6"
            >
              <svg
                fill="currentColor"
                height="20"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <defs />
                <path
                  d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  .c3 {
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.c5 {
  font-weight: 500;
  margin-right: 8px;
  white-space: nowrap;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: inherit;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #2B2D33;
  color: #FFFFFF;
  margin-bottom: 8px;
  padding-right: 46px;
}

.c6 {
  position: absolute;
  top: 16px;
  right: 16px;
  cursor: pointer;
  color: #AAABAD;
}

.c6:hover {
  color: #FFFFFF;
}

.c1 {
  -webkit-transition: height 0.5s ease;
  transition: height 0.5s ease;
  width: 500px;
  -webkit-animation: gYAHGK 0.5s ease forwards;
  animation: gYAHGK 0.5s ease forwards;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: fixed;
  z-index: 99999999;
  margin: 12px 0;
  -webkit-transition: height 0.5s ease;
  transition: height 0.5s ease;
  left: 20px;
  bottom: 0;
}

<div
    class="c0"
  >
    <div
      class="c1"
      open=""
    >
      <div
        class="c2"
        id="notification_0"
      >
        <div
          class="c3"
        >
          <svg
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <path
              d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
            />
            <path
              clip-rule="evenodd"
              d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            Plain notification.
          </div>
          <div>
            Для нейтральных уведомлений
            <span
              class="c6"
            >
              <svg
                fill="currentColor"
                height="20"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <defs />
                <path
                  d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  .c3 {
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.c5 {
  font-weight: 500;
  margin-right: 8px;
  white-space: nowrap;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: inherit;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #2B2D33;
  color: #FFFFFF;
  margin-bottom: 8px;
  padding-right: 46px;
}

.c6 {
  position: absolute;
  top: 16px;
  right: 16px;
  cursor: pointer;
  color: #AAABAD;
}

.c6:hover {
  color: #FFFFFF;
}

.c1 {
  -webkit-transition: height 0.5s ease;
  transition: height 0.5s ease;
  width: 500px;
  -webkit-animation: gYAHGK 0.5s ease forwards;
  animation: gYAHGK 0.5s ease forwards;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: fixed;
  z-index: 99999999;
  margin: 12px 0;
  -webkit-transition: height 0.5s ease;
  transition: height 0.5s ease;
  width: 1px;
  left: 50%;
  bottom: 0;
}

<div
    class="c0"
  >
    <div
      class="c1"
      open=""
    >
      <div
        class="c2"
        id="notification_0"
      >
        <div
          class="c3"
        >
          <svg
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <path
              d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
            />
            <path
              clip-rule="evenodd"
              d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            Plain notification.
          </div>
          <div>
            Для нейтральных уведомлений
            <span
              class="c6"
            >
              <svg
                fill="currentColor"
                height="20"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <defs />
                <path
                  d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  .c3 {
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.c5 {
  font-weight: 500;
  margin-right: 8px;
  white-space: nowrap;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: inherit;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #2B2D33;
  color: #FFFFFF;
  margin-bottom: 8px;
  padding-right: 46px;
}

.c6 {
  position: absolute;
  top: 16px;
  right: 16px;
  cursor: pointer;
  color: #AAABAD;
}

.c6:hover {
  color: #FFFFFF;
}

.c1 {
  -webkit-transition: height 0.5s ease;
  transition: height 0.5s ease;
  width: 500px;
  -webkit-animation: gYAHGK 0.5s ease forwards;
  animation: gYAHGK 0.5s ease forwards;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: fixed;
  z-index: 99999999;
  margin: 12px 0;
  -webkit-transition: height 0.5s ease;
  transition: height 0.5s ease;
  right: 20px;
  bottom: 0;
}

<div
    class="c0"
  >
    <div
      class="c1"
      open=""
    >
      <div
        class="c2"
        id="notification_0"
      >
        <div
          class="c3"
        >
          <svg
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <path
              d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
            />
            <path
              clip-rule="evenodd"
              d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            Plain notification.
          </div>
          <div>
            Для нейтральных уведомлений
            <span
              class="c6"
            >
              <svg
                fill="currentColor"
                height="20"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <defs />
                <path
                  d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
